[package]
name = "sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "quick_sort"
path = "src/quick_sort.rs"

[[bin]]
name = "quick_sort_single_linked_list"
path = "src/quick_sort_single_linked_list.rs"

[dependencies]
