[metadata]
name = flaskr
version = attr: flaskr.VERSION
author = Shingo OKAWA
description = Simple WEB Application with Session-based Authentication
long_description = file: README.md
license = MIT License

[options]
packages = find:
install_requires =
    flask
    flask-sqlalchemy
    flask-login

[options.extras_require]
test =
    pytest
    pytest-cov
