[metadata]
name = flaskr
version = 1.0.0
author = Shingo OKAWA
description = Simple WEB Application with Session-based Authentication
long_description = file: README.md
license = MIT License

[options]
packages = find:
install_requires =
    flask
    flask-sqlalchemy
    flask-login
    python-dotenv

[options.extras_require]
test =
    pytest
    pytest-cov
