[metadata]
name = flaskr
version = 1.0.0
author = Shingo OKAWA
description = Simple WEB Application with OAuth-based Authentication
long_description = file: README.md
license = MIT License

[options]
packages = find:
install_requires =
    python-dotenv
    requests
    flask
    oauthlib
    pyOpenSSL
    flask-login
    
[options.extras_require]
test =
    pytest
    pytest-cov
