[metadata]
name = flaskr
version = 1.0.0
author = Shingo OKAWA
description = Simple WEB Application with OAuth-based Authentication
long_description = file: README.md
license = MIT License

[options]
packages = find:
install_requires =
    click
    python-dotenv
    requests
    flask
    oauthlib
    pyOpenSSL
    pyjwt
    flask-login
    flask-sqlalchemy
    
[options.extras_require]
test =
    pytest
    pytest-cov
